tests/fixtures/invalid/str_mul_str.py
# Cannot multiply Str and Str
x: str = "hello" * "hello"
